--- a/build-gra-Desktop_Qt_5_13_2_MinGW_64_bit-Debug/Makefile.Debug
+++ b/build-gra-Desktop_Qt_5_13_2_MinGW_64_bit-Debug/Makefile.Debug
@@ -101,81 +101,7 @@ compiler_clean:
 
 ####### Compile
 
-debug/elementy.o: ../gra/elementy.cpp ../gra/elementy.h \
-		../../../../Desktop/SFML-2.5.1/include/SFML/Window.hpp \
-		../../../../Desktop/SFML-2.5.1/include/SFML/System.hpp \
-		../../../../Desktop/SFML-2.5.1/include/SFML/Config.hpp \
-		../../../../Desktop/SFML-2.5.1/include/SFML/System/Clock.hpp \
-		../../../../Desktop/SFML-2.5.1/include/SFML/System/Export.hpp \
-		../../../../Desktop/SFML-2.5.1/include/SFML/System/Time.hpp \
-		../../../../Desktop/SFML-2.5.1/include/SFML/System/Err.hpp \
-		../../../../Desktop/SFML-2.5.1/include/SFML/System/FileInputStream.hpp \
-		../../../../Desktop/SFML-2.5.1/include/SFML/System/InputStream.hpp \
-		../../../../Desktop/SFML-2.5.1/include/SFML/System/NonCopyable.hpp \
-		../../../../Desktop/SFML-2.5.1/include/SFML/System/Lock.hpp \
-		../../../../Desktop/SFML-2.5.1/include/SFML/System/MemoryInputStream.hpp \
-		../../../../Desktop/SFML-2.5.1/include/SFML/System/Mutex.hpp \
-		../../../../Desktop/SFML-2.5.1/include/SFML/System/Sleep.hpp \
-		../../../../Desktop/SFML-2.5.1/include/SFML/System/String.hpp \
-		../../../../Desktop/SFML-2.5.1/include/SFML/System/Utf.hpp \
-		../../../../Desktop/SFML-2.5.1/include/SFML/System/Utf.inl \
-		../../../../Desktop/SFML-2.5.1/include/SFML/System/String.inl \
-		../../../../Desktop/SFML-2.5.1/include/SFML/System/Thread.hpp \
-		../../../../Desktop/SFML-2.5.1/include/SFML/System/Thread.inl \
-		../../../../Desktop/SFML-2.5.1/include/SFML/System/ThreadLocal.hpp \
-		../../../../Desktop/SFML-2.5.1/include/SFML/System/ThreadLocalPtr.hpp \
-		../../../../Desktop/SFML-2.5.1/include/SFML/System/ThreadLocalPtr.inl \
-		../../../../Desktop/SFML-2.5.1/include/SFML/System/Vector2.hpp \
-		../../../../Desktop/SFML-2.5.1/include/SFML/System/Vector2.inl \
-		../../../../Desktop/SFML-2.5.1/include/SFML/System/Vector3.hpp \
-		../../../../Desktop/SFML-2.5.1/include/SFML/System/Vector3.inl \
-		../../../../Desktop/SFML-2.5.1/include/SFML/Window/Clipboard.hpp \
-		../../../../Desktop/SFML-2.5.1/include/SFML/Window/Export.hpp \
-		../../../../Desktop/SFML-2.5.1/include/SFML/Window/Context.hpp \
-		../../../../Desktop/SFML-2.5.1/include/SFML/Window/GlResource.hpp \
-		../../../../Desktop/SFML-2.5.1/include/SFML/Window/ContextSettings.hpp \
-		../../../../Desktop/SFML-2.5.1/include/SFML/Window/Cursor.hpp \
-		../../../../Desktop/SFML-2.5.1/include/SFML/Window/Event.hpp \
-		../../../../Desktop/SFML-2.5.1/include/SFML/Window/Joystick.hpp \
-		../../../../Desktop/SFML-2.5.1/include/SFML/Window/Keyboard.hpp \
-		../../../../Desktop/SFML-2.5.1/include/SFML/Window/Mouse.hpp \
-		../../../../Desktop/SFML-2.5.1/include/SFML/Window/Sensor.hpp \
-		../../../../Desktop/SFML-2.5.1/include/SFML/Window/Touch.hpp \
-		../../../../Desktop/SFML-2.5.1/include/SFML/Window/VideoMode.hpp \
-		../../../../Desktop/SFML-2.5.1/include/SFML/Window/Window.hpp \
-		../../../../Desktop/SFML-2.5.1/include/SFML/Window/WindowHandle.hpp \
-		../../../../Desktop/SFML-2.5.1/include/SFML/Window/WindowStyle.hpp \
-		../../../../Desktop/SFML-2.5.1/include/SFML/Graphics.hpp \
-		../../../../Desktop/SFML-2.5.1/include/SFML/Graphics/BlendMode.hpp \
-		../../../../Desktop/SFML-2.5.1/include/SFML/Graphics/Export.hpp \
-		../../../../Desktop/SFML-2.5.1/include/SFML/Graphics/CircleShape.hpp \
-		../../../../Desktop/SFML-2.5.1/include/SFML/Graphics/Shape.hpp \
-		../../../../Desktop/SFML-2.5.1/include/SFML/Graphics/Drawable.hpp \
-		../../../../Desktop/SFML-2.5.1/include/SFML/Graphics/RenderStates.hpp \
-		../../../../Desktop/SFML-2.5.1/include/SFML/Graphics/Transform.hpp \
-		../../../../Desktop/SFML-2.5.1/include/SFML/Graphics/Rect.hpp \
-		../../../../Desktop/SFML-2.5.1/include/SFML/Graphics/Rect.inl \
-		../../../../Desktop/SFML-2.5.1/include/SFML/Graphics/Transformable.hpp \
-		../../../../Desktop/SFML-2.5.1/include/SFML/Graphics/VertexArray.hpp \
-		../../../../Desktop/SFML-2.5.1/include/SFML/Graphics/Vertex.hpp \
-		../../../../Desktop/SFML-2.5.1/include/SFML/Graphics/Color.hpp \
-		../../../../Desktop/SFML-2.5.1/include/SFML/Graphics/PrimitiveType.hpp \
-		../../../../Desktop/SFML-2.5.1/include/SFML/Graphics/ConvexShape.hpp \
-		../../../../Desktop/SFML-2.5.1/include/SFML/Graphics/Font.hpp \
-		../../../../Desktop/SFML-2.5.1/include/SFML/Graphics/Glyph.hpp \
-		../../../../Desktop/SFML-2.5.1/include/SFML/Graphics/Texture.hpp \
-		../../../../Desktop/SFML-2.5.1/include/SFML/Graphics/Image.hpp \
-		../../../../Desktop/SFML-2.5.1/include/SFML/Graphics/RectangleShape.hpp \
-		../../../../Desktop/SFML-2.5.1/include/SFML/Graphics/RenderTarget.hpp \
-		../../../../Desktop/SFML-2.5.1/include/SFML/Graphics/View.hpp \
-		../../../../Desktop/SFML-2.5.1/include/SFML/Graphics/RenderTexture.hpp \
-		../../../../Desktop/SFML-2.5.1/include/SFML/Graphics/RenderWindow.hpp \
-		../../../../Desktop/SFML-2.5.1/include/SFML/Graphics/Shader.hpp \
-		../../../../Desktop/SFML-2.5.1/include/SFML/Graphics/Glsl.hpp \
-		../../../../Desktop/SFML-2.5.1/include/SFML/Graphics/Glsl.inl \
-		../../../../Desktop/SFML-2.5.1/include/SFML/Graphics/Sprite.hpp \
-		../../../../Desktop/SFML-2.5.1/include/SFML/Graphics/Text.hpp \
-		../../../../Desktop/SFML-2.5.1/include/SFML/Graphics/VertexBuffer.hpp
+debug/elementy.o: ../gra/elementy.cpp 
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o debug\elementy.o ..\gra\elementy.cpp
 
 debug/main.o: ../gra/main.cpp 
