--- a/build-gra-Desktop_Qt_5_13_2_MinGW_64_bit-Debug/Makefile
+++ b/build-gra-Desktop_Qt_5_13_2_MinGW_64_bit-Debug/Makefile
@@ -211,6 +211,7 @@ Makefile: ../gra/gra.pro C:/Qt/5.13.2/mingw73_64/mkspecs/win32-g++/qmake.conf C:
 		C:/Qt/5.13.2/mingw73_64/mkspecs/features/qt_config.prf \
 		C:/Qt/5.13.2/mingw73_64/mkspecs/win32-g++/qmake.conf \
 		C:/Qt/5.13.2/mingw73_64/mkspecs/features/spec_post.prf \
+		.qmake.stash \
 		C:/Qt/5.13.2/mingw73_64/mkspecs/features/exclusive_builds.prf \
 		C:/Qt/5.13.2/mingw73_64/mkspecs/features/toolchain.prf \
 		C:/Qt/5.13.2/mingw73_64/mkspecs/features/default_pre.prf \
@@ -378,6 +379,7 @@ C:/Qt/5.13.2/mingw73_64/mkspecs/features/qt_functions.prf:
 C:/Qt/5.13.2/mingw73_64/mkspecs/features/qt_config.prf:
 C:/Qt/5.13.2/mingw73_64/mkspecs/win32-g++/qmake.conf:
 C:/Qt/5.13.2/mingw73_64/mkspecs/features/spec_post.prf:
+.qmake.stash:
 C:/Qt/5.13.2/mingw73_64/mkspecs/features/exclusive_builds.prf:
 C:/Qt/5.13.2/mingw73_64/mkspecs/features/toolchain.prf:
 C:/Qt/5.13.2/mingw73_64/mkspecs/features/default_pre.prf:
